@@ -1,3 +1,8 @@
+2007-06-20  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/modules/slurm.c : Include SLURM headers after all pdsh
+	  includes to avoid redefinition of bool type.
+
 2007-06-07  Mark Grondona <mgrondona@llnl.gov>
 
 	* : tag pdsh-2.13.
